--- a/plugins/_jquery/view/field/manytomany.field.html
+++ b/plugins/_jquery/view/field/manytomany.field.html
@@ -3,12 +3,14 @@
 
 <link rel="stylesheet" href="{{baseurl}}system/css/ext/select2/select2.min.css">
 
+{% block relationship_input %}
 <!-- Additional hidden input so that empty value is sent when nothing is selected -->
 <input type="hidden" name="{{field.name}}[]">
+{% endblock relationship_input %}
 
 <!-- Display markup -->
 <img id="{{field.uid}}-loader" src='{{baseurl}}system/img/assets/ajax-loader.gif'>
-<select class="ofw-field-manytomany form-control hide" data-placeholder="{{#system_field_relationships_search#|escape}}" id="{{field.uid}}" name="{{field.name}}[]" multiple>
+<select class="{% block relationship_class %}ofw-field-manytomany{% endblock relationship_class %} form-control hide" data-placeholder="{{#system_field_relationships_search#|escape}}" id="{{field.uid}}" name="{% block relationship_name %}{{field.name}}[]{% endblock %}" {% block relationship_multiple %}multiple{% endblock %}>
 	{% if field.choices.total <= 50 %}
 		<option value="" disabled>{{#system_field_relationships_search#|escape}}</option>
 		{% foreach field.choices as choice %}
@@ -68,6 +70,7 @@
 					},
 					cache: true
 				  },
+				  width: '100%',
 				  minimumInputLength: 1,
 				  templateResult: function(node){
 				  	if(node.name) return node.name;
@@ -83,3 +86,12 @@
 		{% endif %}
 	});
 </script>
+<style>
+	/** Fixes for Bootstrap modal **/
+	.select2-close-mask{
+	    z-index: 2099 !important;
+	}
+	.select2-dropdown{
+		z-index: 3051 !important;
+	}
+</style>
