If more than five choices, use chosen.

--- a/plugins/_jquery/view/field/select.field.html
+++ b/plugins/_jquery/view/field/select.field.html
@@ -7,3 +7,8 @@
 		<option value='{{choice}}' {% if field.value eq choice %}selected{%endif%}>{{choice}}</option>
 	{% endfor %}
 </select>
+{% if field.options.choices|count > 5 %}
+	<script>
+        $('#{{field.uid}}').chosen({});
+	</script>
+{% endif %}
