--- a/plugins/_jquery/view/field/manytomany.field.html
+++ b/plugins/_jquery/view/field/manytomany.field.html
@@ -11,6 +11,7 @@
 <!-- Display markup -->
 <img id="{{field.uid}}-loader" src='{{baseurl}}system/img/assets/ajax-loader.gif'>
 <select class="{% block relationship_class %}ofw-field-manytomany{% endblock relationship_class %} form-control hide" data-placeholder="{{#system_field_relationships_search#|escape}}" id="{{field.uid}}" name="{% block relationship_name %}{{field.name}}[]{% endblock %}" {% block relationship_multiple %}multiple{% endblock %}>
+	{% block relationship_empty %}{% endblock relationship_empty %}
 	{% if field.choices.total <= 50 %}
 		<option value="" disabled>{{#system_field_relationships_search#|escape}}</option>
 		{% foreach field.choices as choice %}
