--- a/plugins/_jquery/view/field/manytomany.field.html
+++ b/plugins/_jquery/view/field/manytomany.field.html
@@ -44,9 +44,12 @@
 
 		// Init with select 2
 		{% if field.choices.total <= 50 %}
-			$('#{{field.uid}}').select2();
+			$('#{{field.uid}}').select2({
+				allowClear: true
+			});
 		{% elseif %}
 			$('#{{field.uid}}').select2({
+ 				 allowClear: true,
 				 ajax: {
 					url: ofw.baseurl+"system/search/relation/",
 					dataType: 'json',
