--- a/app/view/admin/category/category_list.html
+++ b/app/view/admin/category/category_list.html
@@ -1,87 +1,65 @@
 {% extends 'admin/base.html' %}
 
-{% block selectmenu %}
-	<script language="javascript">
-		$('#categories-menu').addClass('active');
-	</script>
-{% endblock %}
-
-{% block contenttitle %}
-<div class="row">
-	<div class="col-md-12">
-		<h2 class="page-title">{{#admin_list#}} <small>{{#admin_list_desc#}}</small></h2>
-	</div>
-</div>
-{% endblock contenttitle %}
-
-
 {% block submenu %}
-	<a class="btn btn-success" href="{{baseurl}}admin/category/add/?parentcategory={{current_category.id}}">{{#admin_new#}}</a>
-
-    <input class="pull-right" id="search-box" value="{{zaj.get.query|escape}}" type="search" placeholder="{{#admin_search#}}">
-
-    <div id="gender" class="btn-group pull-right" data-toggle="buttons" style="margin-right: 5px;">
-        <label class="btn btn-default {% if zaj.get.parentcategory != 'all' %}btn-primary active{% endif %}" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default"  onclick="zaj.redirect('admin/category/')">
+	<!-- Add buttons here -->
+    <div class="btn-group" data-toggle="buttons">
+        <label class="btn btn-xs {% if ofw.get.parentcategory != 'all' %}btn-info active{% elseif %}btn-default{% endif %}" data-toggle-class="btn-info" data-toggle-passive-class="btn-default"  onclick="ofw.redirect('admin/category/')">
             <input type="radio" name="show"> {{#show_by_hierarchy#}}
         </label>
-        <label class="btn btn-default {% if zaj.get.parentcategory == 'all' %}btn-primary active{% endif %}" data-toggle-class="btn-primary" data-toggle-passive-class="btn-default" onclick="zaj.redirect('admin/category/?parentcategory=all')">
+        <label class="btn btn-xs {% if ofw.get.parentcategory == 'all' %}btn-info active{% elseif %}btn-default{% endif %}" data-toggle-class="btn-info" data-toggle-passive-class="btn-default" onclick="ofw.redirect('admin/category/?parentcategory=all')">
             <input type="radio" name="show"> {{#show_all#}}
         </label>
     </div>
-
-	<script language="javascript">
-		zaj.ready(function(){
-			$('#search-box').$zaj().search('/admin/category/', '#admincontent');
-		});
-	</script>
+	<a href='{{baseurl}}admin/{{#admin_list_url#}}/add/?type={{ofw.get.type}}' class="btn btn-primary btn-xs"><i class="fa fa-plus"></i> {{#admin_new#}}</a>
 {% endblock submenu %}
 
 {% block content %}
 
-    <br/><br/>
-
-    {% if zaj.get.parentcategory = 'all' %}
-    <fieldset>
-        <legend>
-            {{#admin_list_all#}} <small>{{#categories#|printf:objects.total}}</small>
-        </legend>
-    </fieldset>
-    {% elseif zaj.get.parentcategory %}
-    <fieldset>
-        <legend>
-            {{current_category.name}} <small>{{#subcategories#|printf:objects.total}}</small>
-            {% if current_category.data.parentcategory %}
-                <a class="btn btn-default pull-right" href="{{baseurl}}admin/category/?parentcategory={{current_category.data.parentcategory.id}}"><span class="glyphicon glyphicon-chevron-up"></span> {{current_category.data.parentcategory.name}}</a>
-            {% elseif %}
-                <a class="btn btn-default pull-right" href="{{baseurl}}admin/category/"><span class="glyphicon glyphicon-chevron-up"></span> {{#admin_list_toplevel#}}</a>
-            {% endif %}
-        </legend>
-    </fieldset>
+    {% if ofw.get.parentcategory = 'all' %}
+		<fieldset>
+			<legend>
+				{{#admin_list_all#}} <small>{{#categories#|printf:objects.total}}</small>
+			</legend>
+		</fieldset>
+    {% elseif ofw.get.parentcategory %}
+		<fieldset>
+			<legend>
+				{{current_category.name}} <small>{{#subcategories#|printf:objects.total}}</small>
+				{% if current_category.data.parentcategory %}
+					<a class="btn btn-default pull-right" href="{{baseurl}}admin/category/?parentcategory={{current_category.data.parentcategory.id}}"><span class="glyphicon glyphicon-chevron-up"></span> {{current_category.data.parentcategory.name}}</a>
+				{% elseif %}
+					<a class="btn btn-default pull-right" href="{{baseurl}}admin/category/"><span class="glyphicon glyphicon-chevron-up"></span> {{#admin_list_toplevel#}}</a>
+				{% endif %}
+			</legend>
+		</fieldset>
     {% elseif %}
-    <fieldset>
-        <legend>
-            {{#admin_list_toplevel#}} <small>{{#subcategories#|printf:objects.total}}</small>
-        </legend>
-    </fieldset>
+		<fieldset>
+			<legend>
+				{{#admin_list_toplevel#}} <small>{{#subcategories#|printf:objects.total}}</small>
+			</legend>
+		</fieldset>
     {% endif %}
 
 	<table class="table table-striped table-hover">
+		<tbody>
 		{% foreach objects as object %}
 			<tr data-sortable='{{object.id}}'>
-				<td colspan="3">
+				<td colspan="2">
                     <a title="{{object.name|escape:'html'}}" href="{{baseurl}}admin/category/edit/?id={{object.id}}">{{object.name|truncate:'50'}}</a>
-
-					<a class="btn btn-small btn-danger pull-right" onclick="if(confirm('{{#admin_delete_warning#}}')) window.location='{{baseurl}}admin/category/delete/?id={{object.id}}';"><i class="glyphicon glyphicon-trash"></i></a>
-                    <a class="btn btn-primary btn-small pull-right" href="{{baseurl}}admin/category/edit/?id={{object.id}}">{{#admin_edit#}}</a>
+				</td>
+				<td class="text-right">
+					<a class="btn btn-xs featured" title="{{#category_featured#|escape:'html'}}" onclick="feature_object_toggle('{{object.id}}');"><i class="glyphicon glyphicon-star{% if not object.featured %}-empty{% endif %}"></i></a>
 					{% if not object.data.parentcategory and #category_two_level# or not #category_two_level# %}
-                    	<a class="btn btn-primary btn-small pull-right" href="{{baseurl}}admin/category/?parentcategory={{object.id}}">{{#admin_edit_subcategories#|printf:object.child_count}}</a>
+                    	<a class="btn btn-primary btn-xs" href="{{baseurl}}admin/category/?parentcategory={{object.id}}">{{#admin_edit_subcategories#|printf:object.child_count}}</a>
 					{% endif %}
-					<a class="btn btn-small featured pull-right" title="{{#category_featured#|escape:'html'}}" onclick="feature_object_toggle('{{object.id}}');"><i class="glyphicon glyphicon-star{% if not object.featured %}-empty{% endif %}"></i></a>
+                    <a class="btn btn-primary btn-xs" href="{{baseurl}}admin/category/edit/?id={{object.id}}">{{#admin_edit#}}</a>
+					<a class="btn btn-xs btn-danger" onclick="if(confirm('{{#admin_delete_warning#}}')) window.location='{{baseurl}}admin/category/delete/?id={{object.id}}';"><i class="glyphicon glyphicon-trash"></i></a>
 				</td>
 			</tr>
 		{% elseforeach %}
 			<tr><td><div class="text-center">{{#admin_none_found#}}</div></td></tr>
 		{% endforeach %}
+		</tbody>
 	</table>
 
 	<script language="JavaScript" src="{{baseurl}}system/js/jquery/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js" type="text/javascript"></script>
@@ -91,12 +69,14 @@
 			// Remove and add thinking class
 				el.removeClass('glyphicon-star-empty').removeClass('glyphicon-star').addClass('glyphicon-refresh');
 			// Now update data
-				zaj.ajax.post('admin/category/toggle/featured/?id='+objectid, function(r){
+				ofw.ajax.post('admin/category/toggle/featured/?id='+objectid, function(r){
 					el.removeClass('glyphicon-refresh');
 					if(r == 'yes') el.addClass('glyphicon-star');
 					else el.addClass('glyphicon-star-empty');
 				});
 		}
-		$('table tbody').$zaj().sortable('/admin/category/reorder/');
+		ofw.ready(function(){
+			$('table tbody').$ofw().sortable('/admin/category/reorder/');
+		});
 	</script>
 {% endblock content %}
