Textarea gets safe, since we encode htmlentities anyway.

--- a/plugins/_jquery/view/field/textarea.field.html
+++ b/plugins/_jquery/view/field/textarea.field.html
@@ -1,1 +1,1 @@
-<textarea class='ofw-field-text form-control' id='{{field.id}}' name='{{field.name}}'>{{field.value|escape:'htmlall'}}</textarea>
+<textarea class='ofw-field-text form-control' id='{{field.id}}' name='{{field.name}}'>{{field.value|safe|escape:'htmlall'}}</textarea>
