change <aside> to div

--- a/app/view/ieupgrade/upgrade.html
+++ b/app/view/ieupgrade/upgrade.html
@@ -1,6 +1,6 @@
 <!--[if lte IE 8]>
 	{% lang 'ieupgrade/ieupgrade' %}
-	<aside id="ie_upgrade" class="navbar-fixed-top bg-danger" style="z-index:99999">
+	<div id="ie_upgrade" class="navbar-fixed-top bg-danger" style="z-index:99999">
 		<div class="container">
 			<div class="row">
 				<p class="col-xs-12" style="margin: 10px auto; font: bold 16px/34px 'Helvetica Neue',sans-serif;">
@@ -10,5 +10,5 @@
 				</p>
 			</div>
 		</div>
-	</aside>
+	</div>
 <![endif]-->
