--- a/plugins/_jquery/view/field/keyvalue.field.html
+++ b/plugins/_jquery/view/field/keyvalue.field.html
@@ -4,7 +4,7 @@
 
 <script language="javascript">
     function add_field_{{field.uid}}(key, val){
-        var el = $("<div class='alert alert-info'><input class='field text input-mini' type='text' name='{{field.name}}[key][]' placeholder='key' value='"+key+"'> - <input class='field text input-small' type='text' name='{{field.name}}[value][]' placeholder='value' value='"+val+"'> <a class='close' href='#delete' onclick=\"$(this).parents('div.alert').first().remove();\">&times;</a></div>");
+        var el = $("<div class='alert alert-info'><input class='field text input-mini' type='text' name='{{field.name}}[key][]' placeholder='{{#system_field_keyvalue_key#}}' value='"+key+"'> - <input class='field text input-small' type='text' name='{{field.name}}[value][]' placeholder='{{#system_field_keyvalue_value#}}' value='"+val+"'> <a class='close' href='#delete' onclick=\"$(this).parents('div.alert').first().remove();\">&times;</a></div>");
         $('#{{field.uid}}').append(el);
     }
     {% if field.value %}
