new button localized

--- a/plugins/_jquery/view/field/keyvalue.field.html
+++ b/plugins/_jquery/view/field/keyvalue.field.html
@@ -1,6 +1,6 @@
 <!-- A key/value object editor for json fields -->
 <div id='{{field.uid}}'></div>
-<a class="btn btn-mini btn-success" onclick="add_field_{{field.uid}}('', '');">New</a>
+<a class="btn btn-mini btn-success" onclick="add_field_{{field.uid}}('', '');">{{#system_field_keyvalue_new#}}</a>
 
 <script language="javascript">
     function add_field_{{field.uid}}(key, val){
