--- a/app/view/admin/category/category_list.html
+++ b/app/view/admin/category/category_list.html
@@ -41,24 +41,26 @@
     {% endif %}
 
 	<table class="table table-striped table-hover">
-		<tbody>
-		{% foreach objects as object %}
-			<tr data-sortable='{{object.id}}'>
-				<td colspan="2">
-                    <a title="{{object.name|escape:'html'}}" href="{{baseurl}}admin/category/edit/?id={{object.id}}">{{object.name|truncate:'50'}}</a>
-				</td>
-				<td class="text-right">
-					<a class="btn btn-xs featured" title="{{#category_featured#|escape:'html'}}" onclick="feature_object_toggle('{{object.id}}');"><i class="glyphicon glyphicon-star{% if not object.featured %}-empty{% endif %}"></i></a>
-					{% if not object.data.parentcategory and #category_two_level# or not #category_two_level# %}
-                    	<a class="btn btn-primary btn-xs" href="{{baseurl}}admin/category/?parentcategory={{object.id}}">{{#admin_edit_subcategories#|printf:object.child_count}}</a>
-					{% endif %}
-                    <a class="btn btn-primary btn-xs" href="{{baseurl}}admin/category/edit/?id={{object.id}}">{{#admin_edit#}}</a>
-					<a class="btn btn-xs btn-danger" onclick="if(confirm('{{#admin_delete_warning#}}')) window.location='{{baseurl}}admin/category/delete/?id={{object.id}}';"><i class="glyphicon glyphicon-trash"></i></a>
-				</td>
-			</tr>
-		{% elseforeach %}
-			<tr><td><div class="text-center">{{#admin_none_found#}}</div></td></tr>
-		{% endforeach %}
+		<tbody data-autopagination="{{users.pagination.autopagination}}">
+		{% block autopagination %}
+			{% foreach objects as object %}
+				<tr data-sortable='{{object.id}}'>
+					<td colspan="2">
+						<a title="{{object.name|escape:'html'}}" href="{{baseurl}}admin/category/edit/?id={{object.id}}">{{object.name|truncate:'50'}}</a>
+					</td>
+					<td class="text-right">
+						<a class="btn btn-xs featured" title="{{#category_featured#|escape:'html'}}" onclick="feature_object_toggle('{{object.id}}');"><i class="glyphicon glyphicon-star{% if not object.featured %}-empty{% endif %}"></i></a>
+						{% if not object.data.parentcategory and #category_two_level# or not #category_two_level# %}
+							<a class="btn btn-primary btn-xs" href="{{baseurl}}admin/category/?parentcategory={{object.id}}">{{#admin_edit_subcategories#|printf:object.child_count}}</a>
+						{% endif %}
+						<a class="btn btn-primary btn-xs" href="{{baseurl}}admin/category/edit/?id={{object.id}}">{{#admin_edit#}}</a>
+						<a class="btn btn-xs btn-danger" onclick="if(confirm('{{#admin_delete_warning#}}')) window.location='{{baseurl}}admin/category/delete/?id={{object.id}}';"><i class="glyphicon glyphicon-trash"></i></a>
+					</td>
+				</tr>
+			{% elseforeach %}
+				<tr><td><div class="text-center">{{#admin_none_found#}}</div></td></tr>
+			{% endforeach %}
+		{% endblock autopagination %}
 		</tbody>
 	</table>
 
