--- a/plugins/_jquery/view/field/categories.field.html
+++ b/plugins/_jquery/view/field/categories.field.html
@@ -16,6 +16,12 @@
 					{% endwith %}
 				{% endif %}
 			</li>
+		{% elseforeach %}
+			<li class="dd-item">
+				<div class="dd-handle">
+					--
+				</div>
+			</li>
 		{% endforeach %}
 	</ol>
 	{% endblock ddlist %}
