--- a/plugins/_jquery/view/field/photo.field.html
+++ b/plugins/_jquery/view/field/photo.field.html
@@ -1,7 +1,17 @@
 {% lang 'system/fields' 'photos' %}
 <!-- requires jquery! ONLY FOR A SINGLE PHOTO!!!! -->
 <!-- jquery ui -->
-<script language="JavaScript" src="{{baseurl}}system/js/jquery/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js" type="text/javascript"></script>
+<script>
+    if (jQuery.ui == undefined) {
+        var jQui = document.createElement('script');
+        $(jQui).attr({
+            src: '{{baseurl}}system/js/jquery/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js',
+            type: 'text/javascript',
+            language: 'JavaScript'
+        });
+        $('head').append(jQui);
+    }
+</script>
 <!--[if lt IE 8]><script src="{{baseurl}}system/js/json2.js"></script><![endif]-->
 <script language="JavaScript" src="{{baseurl}}system/js/plupload/plupload.full.js" type="text/javascript"></script>
 
