--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -1,7 +1,18 @@
 {% lang 'system/fields' 'photos' %}
 <!-- Multiple photos -->
 <!-- jquery ui -->
-<script language="JavaScript" src="{{baseurl}}system/js/jquery/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js" type="text/javascript"></script>
+<script>
+	if (jQuery.ui == undefined) {
+		var jQui = document.createElement('script');
+		$(jQui).attr({
+			src: '{{baseurl}}system/js/jquery/jquery-ui-1.9.2/js/jquery-ui-1.9.2.custom.min.js',
+			type: 'text/javascript',
+			language: 'JavaScript'
+		});
+		$('head').append(jQui);
+	}
+</script>
+
 <!--[if lt IE 8]><script src="{{baseurl}}system/js/json2.js"></script><![endif]-->
 
 <!-- Current photos -->
