Fix fields so that relationship API uses field name.

--- a/plugins/_jquery/view/field/manytomany.field.html
+++ b/plugins/_jquery/view/field/manytomany.field.html
@@ -60,7 +60,7 @@
 						'query': params.term, // search term
 						//'page': params.page,
 						'class': '{{field.class_name}}',
-						'field': '{{field.name}}'
+						'field': '{{field.field_name}}'
 					  };
 					},
 					processResults: function (data, params) {
