--- a/plugins/_jquery/view/field/boolean.field.html
+++ b/plugins/_jquery/view/field/boolean.field.html
@@ -1,1 +1,1 @@
-<input class='field boolean iCheck' type='checkbox' id='{{field.id}}' name='{{field.name}}' value='true' {% if field.value %}checked{% endif %}>
+<input class='field {{field.type}} iCheck' type='checkbox' id='{{field.uid}}' name='{{field.name}}' value='true' {% if field.value %}checked{% endif %}>
