Improve tests, fix more bugs.

--- a/app/view/system/test/test_base.html
+++ b/app/view/system/test/test_base.html
@@ -1,4 +1,7 @@
 This is my base.
+{% block base_parent_block %}
 {% block base_test %}With a test block.{% endblock %}
 Some more base-level text.
 {% block only_in_base %}Block only in base.{% endblock %}
+{% endblock %}
+Finally some ending.
