--- a/plugins/_jquery/view/field/datetime.field.html
+++ b/plugins/_jquery/view/field/datetime.field.html
@@ -3,7 +3,7 @@
 <script src="{{baseurl}}system/js/bootstrap/3.2/plugins/timepicker/bootstrap-timepicker.min.js?"></script>
 <link rel="stylesheet" href="{{baseurl}}system/css/bootstrap/3.2/css/bootstrap-timepicker.min.css"/>
 <script>
-    zaj.ready(function(){
+    ofw.ready(function(){
         {% if field.value > 0 %}
             $('#{{field.uid}}').val(parseInt({{field.value}}));
             var sd = new Date({{field.value}} * 1000);
@@ -19,15 +19,13 @@
     });
 </script>
 <div class="input-append bootstrap-datepicker">
-    <input name="{{field.id}}[date]" class="input-small" type="text" id="{{field.uid}}-date" value="{% if field.value > 0 %}{{field.value|date:'Y-m-d'}}{% endif %}">
+    <input class="input-small" type="text" id="{{field.uid}}-date" value="{% if field.value > 0 %}{{field.value|date:'Y-m-d'}}{% endif %}">
     <span class="add-on" onclick="jQuery('#date').datepicker('show');"><i class="icon-th"></i></span>
 </div>
 <div class="input-append bootstrap-timepicker"><div class="bootstrap-timepicker-widget dropdown-menu"><table><tbody><tr><td><a href="#" data-action="incrementHour"><i class="icon-chevron-up"></i></a></td><td class="separator">&nbsp;</td><td><a href="#" data-action="incrementMinute"><i class="icon-chevron-up"></i></a></td></tr><tr><td><input type="text" name="hour" class="bootstrap-timepicker-hour" maxlength="2"></td> <td class="separator">:</td><td><input type="text" name="minute" class="bootstrap-timepicker-minute" maxlength="2"></td> </tr><tr><td><a href="#" data-action="decrementHour"><i class="icon-chevron-down"></i></a></td><td class="separator"></td><td><a href="#" data-action="decrementMinute"><i class="icon-chevron-down"></i></a></td></tr></tbody></table></div>
-    <input name="{{field.id}}[time]" class="input-small" id="{{field.uid}}-time" type="text" >
+    <input class="input-small" id="{{field.uid}}-time" type="text" >
     <span class="add-on"><i class="icon-time"></i></span>
 </div>
-
-<input type='hidden' id='{{field.uid}}[format]' name='{{field.name}}[format]' value='Y-m-d H:i:s'>
 <input type='hidden' id='{{field.uid}}' name='{{field.name}}' value='{{field.value|strftime:"%s"}}'>
 <script>
     var act_date_{{field.uid}} = null;
