Upload now works on multi-image fields.

--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -22,7 +22,7 @@
 <div class="clearfix"><br/></div>
 
 <a data-photo="uploadButton" data-photo-field-id="{{field.uid}}" class="btn btn-primary hide"><i class="fa fa-file-picture-o"></i> {{#system_field_picture_upload#}}</a>
-<div data-photo="uploadTransferBar" class="progress progress-striped active hide"><div class="progress-bar bar" style="width: 0;"></div></div>
+<div data-photo="uploadProgressBar" data-photo-field-id="{{field.uid}}" class="progress progress-striped active hide"><div class="progress-bar bar" style="width: 0;"></div></div>
 
 <input type="hidden" name="{{field.name}}" id="{{field.uid}}" data-photo="field" data-photo-field-id="{{field.uid}}">
 
