Add partial support for single file uploads.

--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -4,9 +4,11 @@
 <script>
 	ofw.ready(function(){
 		ofw.addDataAttributeHandler('photo', 'system/js/data/field/', function(photo){
-			{% foreach field.value as field_thumb %}
-				photo.loadExisting('{{field.uid}}', '{{field_thumb.id}}');
-			{% endforeach %}
+			{% block photo_attribute_init %}
+				{% foreach field.value as field_thumb %}
+					photo.loadExisting('{{field.uid}}', '{{field_thumb.id}}');
+				{% endforeach %}
+			{% endblock %}
 		});
 	});
 </script>
