Bugs related to single photo upload fixed.

--- a/plugins/_jquery/view/field/photo.field.html
+++ b/plugins/_jquery/view/field/photo.field.html
@@ -3,6 +3,8 @@
 <script>
 {% block photo_attribute_init %}
 	photo.setFieldOption('{{field.uid}}', 'countLimit', 1);
-	photo.loadExisting('{{field.uid}}', '{{field.value.id}}');
+	{% if field.value %}
+		photo.loadExisting('{{field.uid}}', '{{field.value.id}}');
+	{% endif %}
 {% endblock %}
 </script>
