Requirejs not working, so have to add script tag as workaround.

--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -1,6 +1,7 @@
 {% lang 'system/fields' 'photos' %}
 
 <!-- Load existing photos -->
+<script language="JavaScript" src="{{baseurl}}system/js/plupload/plupload.full.js" type="text/javascript"></script>
 <script>
 	ofw.ready(function(){
 		ofw.addDataAttributeHandler('photo', 'system/js/data/field/', function(photo){
