Basic uploading functionality works.

--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -6,6 +6,7 @@
 		// Load stylesheets
 		ofw.loadCssStylesheet('system/css/ext/dropzone/basic.css');
 		ofw.loadCssStylesheet('system/css/ext/dropzone/dropzone.css');
+		ofw.loadCssStylesheet('system/css/ext/dropzone/outlast.css');
 
 		// Add data attr
 		ofw.addDataAttributeHandler('photo', 'system/js/data/field/', function(photo){
