Every aspect works now, except reordering.

--- a/plugins/_jquery/view/field/photos.field.html
+++ b/plugins/_jquery/view/field/photos.field.html
@@ -12,7 +12,7 @@
 		ofw.addDataAttributeHandler('photo', 'system/js/data/field/', function(photo){
 			{% block photo_attribute_init %}
 				{% foreach field.value as field_thumb %}
-					photo.loadExisting('{{field.uid}}', '{{field_thumb.id}}', { name: '{{field_thumb.name|escapejs}}', size: '{{field_thumb.data.filesizes.full|escapejs}}' });
+					photo.loadExisting('{{field.uid}}', '{{field_thumb.id}}', { name: '{{field_thumb.name|escapejs}}', size: '{{field_thumb.data.filesizes.full|escapejs}}', orientation: '{{field_thumb.orientation|escapejs}}' });
 				{% endforeach %}
 			{% endblock %}
 		});
